# fmh-notes

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml
docs/: _config.yml  _toc.yml
docs/dev/: azure-ml.md  docker.md  pandas.md  python.md  sklearn.md  vs-code.md
docs/misc/: apps.md  chrome.md  gmail.md  interviewing.md  jupyter-book.md  macbook.md  zotero.md
docs/ml/: index.md  llms.md  scratch.ipynb
docs/recsys/: pytorch-cf-tutorial.ipynb  recsys-notes.md
fmh_notes/: datasets.py  utils.py
notebooks/: .gitignore  _config.yml  _toc.yml  intro.md  mymarkdownfile.md  notebooks.ipynb
notebooks/_static/: custom.css
notebooks/dev/: python.md
notebooks/misc/: jupyter-book.md
notebooks/recsys/: .gitignore  try-recbole.ipynb
