[tool.poetry]
name = "fmh-notes"
version = "0.1.0"
description = ""
authors = ["Max Harper <maxharp3r@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter-book = "^0.15.1"
matplotlib = "^3.7.3"
numpy = "^1.25.2"
pandas = "^2.1.0"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
