[tool.poetry]
name = "fmh-notes"
version = "0.1.0"
description = ""
authors = ["Max Harper <maxharp3r@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.7.3"
numpy = "^1.25.2"
pandas = "^2.1.0"
torch = "^2.0.1"
scikit-learn = "^1.3.0"
torchvision = "^0.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
isort = "^5.12.0"
jupyter-book = "^0.15.1"
pydata-sphinx-theme = "^0.13.3"
sphinx-autobuild = "^2021.3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]

[tool.isort]
profile = "black"
